Added Login feature and password hashing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=Job Portal Backend
 spring.data.mongodb.uri = mongodb\://localhost\:27017/jobportal
 spring.data.mongodb.auto-index-creation=true
+
+
+USER_FOUND =User has register already
+USER_NOT_FOUND = User is not registered
+INVALID_CREDENTIALS = Invalid Credentials
