Integrated email for sending OTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.data.mongodb.auto-index-creation=true
 USER_FOUND =User has register already
 USER_NOT_FOUND = User is not registered
 INVALID_CREDENTIALS = Invalid Credentials
+
+#Email Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rishonwork1305@gmail.com
+spring.mail.password=zmnjhrpwqnnuvlaq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
